--- a/index.html
+++ b/index.html
@@ -4,37 +4,13 @@
 	<meta charset="utf-8">
 	<title>Titel</title>
 	<style type="text/css">
-	main{
-		width: 85%;
-		margin-left:15%;
-		background-color: lightyellow;
-		border-left: 1px solid black;
-		font-size:1.3em;
-		padding: 0 10px;
-	}
-	
-	aside{
-		width:15%;
-		float: left;
-		border-right: 1px solid black;
-		font-size:1.3em;
-		background-color: lightgrey;
-	}
-	ul{
-		list-style-type:square;
-	}
-	img{
-	}
-	.bild{
-		width: 100%;
-		border-radius: 47%;
-	}
 </style>
+<link rel="stylesheet" href="main.css">
 
 </head>
 <body>
 	<aside>
-		<img class ="bild" src="gooo.jpg">
+		<img class ="bild" alt="Jesper Skogman" = src="gooo.jpg">
 		<hr>
 
 <ul><li>Jesper Skogman</li></ul>
